@@ -681,6 +681,19 @@ AC_ARG_ENABLE(debug,
 esac ], CFLAGS="-O2 -g $CFLAGS"
         AC_MSG_RESULT(no))
 
+AC_MSG_CHECKING(for enabled stack tracing)
+AC_ARG_ENABLE(debug,
+[  --enable-stack-trace    Enable memory stack trace],
+[ case "${enableval}" in
+  yes) 
+    AC_MSG_RESULT(yes)
+    AC_DEFINE(SILC_STACKTRACE)
+    ;;
+  *)
+    AC_MSG_RESULT(no)
+    ;;
+esac ], AC_MSG_RESULT(no))
+
 #
 # Disable all assembler optimizations
 #
